--- a/style.css
+++ b/style.css
@@ -54,8 +54,15 @@
         margin-top: 5px;
         border-radius: 10px;
         border: none;
+        box-sizing: border-box;
+        outline: none;
         padding: 10px;
         transition: .3s;
+        
+    }
+
+    input[type=number]:focus{
+        border: 2px solid #B9F7A8;
     }
     
     #bt{
@@ -69,6 +76,7 @@
     #bt:hover{
         color: rgb(1, 0, 68);
         background-color: #B9F7A8;
+        
     }
     
     #form{
@@ -95,6 +103,7 @@
     }
     
     span{
+        margin: 0px 7px 0px 7px;
         font-weight: bold;
         font-size: 2.5em;
         color: rgb(1, 0, 68);
